--- a/config/profile.yml
+++ b/config/profile.yml
@@ -14,28 +14,28 @@ USER:
 
 INFO:
   - label: "Email"
-    value: "richard@example.com"
+    value: "mallakebin@gmail.com"
     icon: "mail-outline"
   - label: "Phone"
-    value: "+1 (213) 352-2795"
+    value: "+977-9862394960"
     icon: "phone-portrait-outline"
   - label: "Birthday"
-    value: "June 26, 1996"
+    value: "June 26, 2003"
     icon: "calendar-outline"
   - label: "Location"
-    value: "Sacramento, California, USA"
+    value: "New Baneswor, Kathmandu, Nepal"
     icon: "location-outline"
 
 SOCIAL:
   - icon: "logo-facebook"
-    url: "https://facebook.com/"
+    url: "https://www.facebook.com/kebin.malla/"
   - icon: "logo-twitter"
-    url: "https://twitter.com/"
+    url: "https://x.com/DevilKevin2"
   - icon: "logo-instagram"
-    url: "https://instagram.com/"
+    url: "https://www.instagram.com/dvl_kvn/"
   - icon: "logo-linkedin"
-    url: "https://www.linkedin.com/"
+    url: "https://www.linkedin.com/in/kebinmalla/"
   - icon: "logo-github"
-    url: "https://github.com/ivansaul"
+    url: "https://github.com/kevin272"
   - icon: "logo-dribbble"
     url: "https://dribbble.com/"
