--- a/config/profile.yml
+++ b/config/profile.yml
@@ -7,9 +7,9 @@ HEADER:
   label: "Show Contacts"
 
 USER:
-  role: "iOS Developer"
-  name: "Richard Hendricks"
-  username: "richardhendricks" # <-- This needs to be the same as your GitHub username
+  role: "Full Stack Developer"
+  name: "Kebin Malla"
+  username: "kevin272" # <-- This needs to be the same as your GitHub username
   avatar: "config/assets/avatars/my-avatar.png"
 
 INFO:
