--- a/config/resume.yml
+++ b/config/resume.yml
@@ -6,47 +6,47 @@ EDUCATION:
   items:
     - period: "2020 - present"
       institution: "Kantipur Engineering College"
-      [cite_start]description: "Bachelors in Computer Engineering "
+      description: "Bachelors in Computer Engineering"
     - period: "2019"
       institution: "Prativa H.S. School"
-      [cite_start]description: "Higher Secondary Education "
+      description: "Higher Secondary Education"
     - period: "2017"
       institution: "Gandaki Boarding School"
-      [cite_start]description: "Secondary Level Education "
+      description: "Secondary Level Education"
 EXPERIENCE:
   enabled: true
   label: "Projects"
   items:
     - period: "2025 - present"
       position: "SajhaBiz, (MERN Stack)"
-      description: "Full stack project that allows users to donate to campaigns opened for local businesses. Features JWT-based authentication and Google Maps API integration. Includes an admin panel for campaign and user management that utilizes CRUD operations, donation tracking, user dashboards, and campaign and user CRUD. "
+      description: "Full stack project that allows users to donate to campaigns opened for local businesses. Features JWT-based authentication and Google Maps API integration. Includes an admin panel for campaign and user management that utilizes CRUD operations, donation tracking, user dashboards, and campaign and user CRUD."
     - period: "2024 - present"
       position: "Javascript Simulation Projects"
-      [cite_start]description: "Simulation coding challenges from TheCoding Train, including Sand Simulation, Live Video feed to ASCII Art, 7Segment Display, and 2D Raycasting. "
+      description: "Simulation coding challenges from TheCoding Train, including Sand Simulation, Live Video feed to ASCII Art, 7Segment Display, and 2D Raycasting."
     - period: "2024"
       position: "Movie Search App, (Reactjs, TailwindCSS)"
-      [cite_start]description: "Features a simple search tool for movie details and shows data of the searched movie by requesting the MovieDB API. "
+      description: "Features a simple search tool for movie details and shows data of the searched movie by requesting the MovieDB API."
     - period: "2024"
       position: "Debug Adventure, KEC Lite Project, (C#, Unity2D)"
-      description: "2D platform game that combines coding challenges with interactive gameplay. Players advance through levels by fixing programming mistakes, creating a mix of gaming and problem-solving. "
+      description: "2D platform game that combines coding challenges with interactive gameplay. Players advance through levels by fixing programming mistakes, creating a mix of gaming and problem-solving."
     - period: "2024"
       position: "Nepali-English Language Translator, Final year project, (Transformers, FFMPEG, PyTorch, Hugging Face, MMS, M2M100)"
-      description: "Developed a Nepali-English translation system using X-Transformer and M2M100 models. Achieved significant improvements in translation and speech recognition quality through the combination of Wave2Vec-based MMS for speech recognition and the transformer-based M2M100 model. Contributed to the Nepali language processing domain by creating a high-quality parallel dataset from diverse origins. "
+      description: "Developed a Nepali-English translation system using X-Transformer and M2M100 models. Achieved significant improvements in translation and speech recognition quality through the combination of Wave2Vec-based MMS for speech recognition and the transformer-based M2M100 model. Contributed to the Nepali language processing domain by creating a high-quality parallel dataset from diverse origins."
     - period: "2024"
       position: "Responsive Google Forms"
-      description: "A simple HTML form styled with CSS for user data collection, processed server-side with PHP. Includes client-side validation and interactivity via JavaScript, and stores data in a MySQL database. "
+      description: "A simple HTML form styled with CSS for user data collection, processed server-side with PHP. Includes client-side validation and interactivity via JavaScript, and stores data in a MySQL database."
     - period: "2023"
       position: "Image Recognition Bot, (PyGUI, Python)"
-      [cite_start]description: "Simple Bot that utilizes image recognition to perform minor tasks like playing pianotiles & simulating clicks on prop's appearance. "
+      description: "Simple Bot that utilizes image recognition to perform minor tasks like playing pianotiles & simulating clicks on prop's appearance."
     - period: "2023"
       position: "Collaborative Code Editor, 3rd year project, (HTML, CSS, JS)"
-      description: "Real-time collaborative code editor that utilizes Logoot algorithm. Features syntax highlighting and realtime chat. "
+      description: "Real-time collaborative code editor that utilizes Logoot algorithm. Features syntax highlighting and realtime chat."
     - period: "2022"
       position: "Credit Card validator, 3rd semester project, (C++)"
-      [cite_start]description: "A straightforward credit card validation application that employs Luhn's algorithm. "
+      description: "A straightforward credit card validation application that employs Luhn's algorithm."
     - period: "2016"
       position: "Qbasic Pokemon Game, Group School Project"
-      [cite_start]description: "Prototype turn based action game generated entirely in Qbasic. "
+      description: "Prototype turn based action game generated entirely in Qbasic."
 LANGUAGES:
   enabled: false
   display_progress_bars: true
@@ -59,12 +59,12 @@ SKILLS:
   label: "My Skills"
   items:
     - skill: "Programming Languages"
-      [cite_start]proficiency: "C, C++, JavaScript, HTML, CSS, SQL, Python, C# "
+      proficiency: "C, C++, JavaScript, HTML, CSS, SQL, Python, C#"
     - skill: "Databases"
-      [cite_start]proficiency: "SQL, MongoDB, Firebase, Supabase "
+      proficiency: "SQL, MongoDB, Firebase, Supabase"
     - skill: "Frameworks/Libraries"
-      [cite_start]proficiency: "React, Node.js, Express.js "
+      proficiency: "React, Node.js, Express.js"
     - skill: "Tools"
-      [cite_start]proficiency: "Git, GitHub, Postman, WordPress "
+      proficiency: "Git, GitHub, Postman, WordPress"
     - skill: "Additional Tools"
-      [cite_start]proficiency: "Photoshop, After Effects, Premiere Pro, FL Studio, MATLAB "
+      proficiency: "Photoshop, After Effects, Premiere Pro, FL Studio, MATLAB"
