--- a/config/resume.yml
+++ b/config/resume.yml
@@ -18,16 +18,16 @@ EXPERIENCE:
   label: "Projects"
   items:
     - period: "2025 - present"
-      position: "SajhaBiz, (MERN Stack)"
+      position: "SajhaBiz"
       description: "Full stack project that allows users to donate to campaigns opened for local businesses. Features JWT-based authentication and Google Maps API integration. Includes an admin panel for campaign and user management that utilizes CRUD operations, donation tracking, user dashboards, and campaign and user CRUD."
     - period: "2024 - present"
       position: "Javascript Simulation Projects"
       description: "Simulation coding challenges from TheCoding Train, including Sand Simulation, Live Video feed to ASCII Art, 7Segment Display, and 2D Raycasting."
     - period: "2024"
-      position: "Movie Search App, (Reactjs, TailwindCSS)"
+      position: "Movie Search App"
       description: "Features a simple search tool for movie details and shows data of the searched movie by requesting the MovieDB API."
     - period: "2024"
-      position: "Debug Adventure, KEC Lite Project, (C#, Unity2D)"
+      position: "Debug Adventure, KEC Lite Project"
       description: "2D platform game that combines coding challenges with interactive gameplay. Players advance through levels by fixing programming mistakes, creating a mix of gaming and problem-solving."
     - period: "2024"
       position: "Nepali-English Language Translator, Final year project, (Transformers, FFMPEG, PyTorch, Hugging Face, MMS, M2M100)"
@@ -36,16 +36,16 @@ EXPERIENCE:
       position: "Responsive Google Forms"
       description: "A simple HTML form styled with CSS for user data collection, processed server-side with PHP. Includes client-side validation and interactivity via JavaScript, and stores data in a MySQL database."
     - period: "2023"
-      position: "Image Recognition Bot, (PyGUI, Python)"
+      position: "Image Recognition Bot"
       description: "Simple Bot that utilizes image recognition to perform minor tasks like playing pianotiles & simulating clicks on prop's appearance."
     - period: "2023"
-      position: "Collaborative Code Editor, 3rd year project, (HTML, CSS, JS)"
+      position: "Collaborative Code Editor"
       description: "Real-time collaborative code editor that utilizes Logoot algorithm. Features syntax highlighting and realtime chat."
     - period: "2022"
-      position: "Credit Card validator, 3rd semester project, (C++)"
+      position: "Credit Card validator"
       description: "A straightforward credit card validation application that employs Luhn's algorithm."
     - period: "2016"
-      position: "Qbasic Pokemon Game, Group School Project"
+      position: "Qbasic Pokemon Game"
       description: "Prototype turn based action game generated entirely in Qbasic."
 LANGUAGES:
   enabled: false
