--- a/config/blog.yml
+++ b/config/blog.yml
@@ -1,27 +1,27 @@
 HEADER:
-  label: "Blog"
+  label: "Certifications"
 
 POSTS:
-  - title: "Design conferences in 2022"
-    category: "Design"
-    subtitle: "A look into the top design conferences happening this year, where innovation meets creativity."
-    published: "2022-02-23"
-    image: "config/assets/posts/blog-1.jpg"
-    url: "https://medium.com"
+  - title: "MERN STACK"
+    category: "Traning"
+    subtitle: "Completed at Broadway Infosys"
+    published: "2025-06-13"
+    image: "config/assets/posts/MERN-STACK.png"
+    url: "https://drive.google.com/file/d/1kPo6n_Q7OGrxLezwLYCMNOJGIPkYsQjO/view?usp=sharing"
 
-  - title: "Best fonts every designer should know"
-    category: "Design"
-    subtitle: "Explore the best fonts that every designer should incorporate into their toolkit for standout projects."
-    published: "2022-02-23"
-    image: "config/assets/posts/blog-2.jpg"
-    url: "https://dev.to"
+  - title: "Python With Data Science"
+    category: "Training"
+    subtitle: "Training at Kantipur Engineering College"
+    published: "2023-07-23"
+    image: "config/assets/posts/Data.jpg"
+    url: "https://drive.google.com/file/d/1oMpAFOCZBtOgHSLLIYaSbusaE8MXeyrB/view?usp=sharing"
 
-  - title: "Design digest #80"
-    category: "Design"
-    subtitle: "Stay updated with the latest design trends, tips, and tools that are shaping the industry."
-    published: "2022-02-23"
-    image: "config/assets/posts/blog-3.jpg"
-    url: "https://hashnode.com"
+  - title: "Build a Movie Search App"
+    category: "Crash Course"
+    subtitle: "Course Completed in Scrimba"
+    published: "2025-01-17"
+    image: "config/assets/posts/Movie.png"
+    url: "https://drive.google.com/file/d/1ovCo-bvWQGAgwSRAP-yGY76XdCRiXiBT/view?usp=sharing"
 
   - title: "UI interactions of the week"
     category: "Design"
