--- a/config/projects.yml
+++ b/config/projects.yml
@@ -2,42 +2,46 @@ HEADER:
   label: "Portfolio"
 PROJECTS:
   - title: "SajhaBiz"
-    category: "MERN Stack"
-    image: null
-    url: null
+    category: "WebDev"
+    image: "config/assets/projects/Sajhabiz.png"
+    url: "https://github.com/kevin272/MERN"
   - title: "Javascript Simulation Projects"
-    category: "Javascript"
+    category: "Misc"
     image: null
     url: null
   - title: "Movie Search App"
-    category: "Reactjs, TailwindCSS"
+    category: "WebDev"
     image: null
     url: null
   - title: "Debug Adventure"
-    category: "C#, Unity2D"
-    image: null
-    url: null
+    category: "Gamedev"
+    image: "config/assets/projects/Debugadv.png"
+    url: "https://dvlkvn.itch.io/debugadventure"
   - title: "Nepali-English Language Translator"
-    category: "Transformers, FFMPEG, PyTorch, Hugging Face, MMS, M2M100"
-    image: null
-    url: null
+    category: "Misc"
+    image: "config/assets/projects/Translator.jpg"
+    url: "https://huggingface.co/spaces/bishaltwr/Ne-En-Trn"
   - title: "Responsive Google Forms"
-    category: "HTML, CSS, PHP, JavaScript, MySQL"
-    image: null
-    url: null
+    category: "WebDev"
+    image: "config/assets/projects/Forms.png"
+    url: "https://makethis.great-site.net/?i=2"
   - title: "Image Recognition Bot"
-    category: "PyGUI, Python"
-    image: null
+    category: "Misc"
+    image: ""
     url: null
   - title: "Collaborative Code Editor"
-    category: "HTML, CSS, JS"
-    image: null
+    category: "WebDev"
+    image: "config/assets/projects/Code.png"
     url: null
   - title: "Credit Card validator"
-    category: "C++"
-    image: null
+    category: "Misc"
+    image: "config/assets/projects/Card.png"
     url: null
   - title: "Qbasic Pokemon Game"
-    category: "Qbasic"
+    category: "Misc"
     image: null
+    url: null
+  - title: "MERN DEMO"
+    category: "WebDevelopment"
+    image: "config/assets/projects/Demo.png"
     url: null
