--- a/config/navbar.yml
+++ b/config/navbar.yml
@@ -2,5 +2,5 @@ NAVBAR:
   - label: "About"
   - label: "Resume"
   - label: "Portfolio"
-  - label: "Blog"
+  - label: "Certifications"
   - label: "Contact"
