--- a/config/projects.yml
+++ b/config/projects.yml
@@ -5,6 +5,14 @@ PROJECTS:
     category: "WebDev"
     image: "config/assets/projects/Sajhabiz.png"
     url: "https://github.com/kevin272/MERN"
+  - title: "ChatR"
+    category: "WebDev"
+    image: "config/assets/projects/ChatR.png"
+    url: "https://chatr.kebinmalla.com.np"
+  - title: "Noteify"
+    category: "WebDev"
+    image: "config/assets/projects/Noteify.png"
+    url: "https://noteify.kebinmalla.com.np"
   - title: "Debug Adventure"
     category: "Gamedev"
     image: "config/assets/projects/Debugadv.png"
@@ -27,21 +35,13 @@ PROJECTS:
     url: null
   - title: "MERN DEMO"
     category: "WebDev"
-    image: "config/assets/projects/Demo.png"
+    image: "config/assets/projects/merndemo.png"
+    url: "https://merndemo.kebinmalla.com.np"
+  - title: "Movie Search App"
+    category: "WebDev"
+    image: "config/assets/projects/movies.png"
     url: null
   - title: "Javascript Simulation Projects"
     category: "Misc"
     image: null
-    url: null
-  - title: "Movie Search App"
-    category: "WebDev"
-    image: null
-    url: null
-  - title: "Qbasic Pokemon Game"
-    category: "Misc"
-    image: null
-    url: null
-  - title: "Image Recognition Bot"
-    category: "Misc"
-    image: ""
     url: null
