--- a/config/about.yml
+++ b/config/about.yml
@@ -42,20 +42,22 @@ TECHNOLOGIES:
   enabled: true
   label: "Tech Experience"
   items:
-    - title: "Python"
-      icon: "config/assets/icons/python.svg"
-    - title: "Flutter"
-      icon: "config/assets/icons/flutter.svg"
+    - title: "MongoDB"
+      icon: "config/assets/icons/mongodb.svg"
+    - title: "Express"
+      icon: "config/assets/icons/express.svg"
+    - title: "React"
+      icon: "config/assets/icons/react.svg"
+    - title: "Node.js"
+      icon: "config/assets/icons/nodejs.svg"
     - title: "Git"
       icon: "config/assets/icons/git.svg"
     - title: "Figma"
       icon: "config/assets/icons/figma.svg"
     - title: "Firebase"
       icon: "config/assets/icons/firebase.svg"
-    - title: "Pandas"
-      icon: "config/assets/icons/pandas.svg"
-    - title: "MongoDB"
-      icon: "config/assets/icons/mongodb.svg"
+    - title: "Node.js"
+      icon: "config/assets/icons/nodejs.svg"
     - title: "Dart"
       icon: "config/assets/icons/dart.svg"
     - title: "HTML"
